# usage_ai_dashboard

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  claude_code.rs  codex.rs  config.rs  dashboard.html  main.rs  model.rs  server.rs  test_util.rs
src/frontend/: charts.js  dashboard.html  main.js  rate-limits.js  styles.css  tables.js  util.js
