[package]
name = "usage_ai_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2+spec-1.1.0"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.7", features = ["cors"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "blocking",
    "json",
] }
