[package]
name = "usage_ai_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1.1.2", default-features = false, features = [
    "parse",
    "serde",
] }
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
tokio = { version = "1", features = ["rt", "net", "fs"] }
rusqlite = { version = "0.40.1", default-features = false, features = [
    "bundled",
] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls-no-provider",
    "blocking",
    "json",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
